Update issue 4438 Labels: ReadyForRelease Change the font size of the 'debug-only' messages on the options pages to make Korean (and probably also Chinese) be more readable.
svn path=/branches/issue-4438/; revision=1007

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -19,7 +19,7 @@
         color: red;
       }
       .sneaky {
-        font-size: x-small;
+        font-size: 12px;
         color:gray;
         border-color: gray;
         margin-top: 50px;
